# hf-visual

./: .copier-answers.yml  README.md  hf-visual.sln  pyproject.toml
.bonsai/: Bonsai.config
.bonsai/Settings/src/: main.editor  main.layout
examples/: rig.py  session.py  task.py
local_packages/: UclOpen.Core.0.1.2-dev0.nupkg  UclOpen.Core.0.1.3-dev0.nupkg  UclOpen.Devices.0.1.0-dev0.nupkg  UclOpen.Devices.0.1.1-dev0.nupkg  UclOpen.Devices.0.1.2-dev0.nupkg  UclOpen.Devices.0.1.3-dev0.nupkg  UclOpen.Logging.0.1.0-dev0.nupkg  UclOpen.Logging.0.1.2-dev0.nupkg  UclOpen.Logging.0.1.3-dev0.nupkg
scripts/: windows-requirements.cmd  windows-requirements.ps1
src/: Extensions.csproj  main.bonsai
src/DataSchemas/: ucl_open_hf_visual.json
src/Extensions/: ParseMatrixPhotodiodeSerialDevice.cs  ParseMatrixSerialDevice.cs  UclOpenHfVisual.Generated.cs
src/ucl_open_hf_visual/: data_types.py  regenerate.py  rig.py  session.py  task.py  visual_stimulation.py
textures/: SN_1_1.tif  SN_1_2.tif  SN_1_3.tif  SN_1_4.tif  SN_1_5.tif  SN_42_1.tif  SN_42_2.tif  SN_42_3.tif  SN_42_4.tif  SN_42_5.tif  SynthIm_1_1.tif  SynthIm_1_2.tif  SynthIm_1_3.tif  SynthIm_1_4.tif  SynthIm_1_5.tif  SynthIm_42_1.tif  SynthIm_42_2.tif  SynthIm_42_3.tif  SynthIm_42_4.tif  SynthIm_42_5.tif  blankStim_1.tif
